[package]
name = "djikstra-maze"
version = "0.1.0"
authors = ["bdemmy <46735112+bdemmy@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
array2d = "*"
priority-queue = "*"
itertools = "*"